--- a/Project/Presentation.html
+++ b/Project/Presentation.html
@@ -208,7 +208,7 @@ There are no seller status, which are **Classic** and **Damaged** in the **Autho
 &lt;img src="Presentation_files/figure-html/unnamed-chunk-7-1.png" width="65%" style="display: block; margin: auto;" /&gt;
 ---
 ## 3. Shiny App
-![](https://pjournal.github.io/boun01g-data-mine-r-s/Project/images/shiny_app.png)
+![](https://github.com/pjournal/boun01g-data-mine-r-s/blob/gh-pages/Project/images/shiny_app.PNG?raw=true)
 ---
 ## 4. Prediction Model
 .pull-left[
@@ -220,7 +220,7 @@ There are no seller status, which are **Classic** and **Damaged** in the **Autho
 - Best MSE: 1581517991
 - Best R-Squared: 0.831
 ]
-.pull-rigth[
+.pull-right[
 ![](https://pjournal.github.io/boun01g-data-mine-r-s/Project/images/model.jpeg)
 ]
 
